Make sure modals sit on top of ace scrollbars

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -29,7 +29,7 @@ body {
   height: 100%;
   background-color: rgb(0 0 0 / 50%);
   display: none;
-  z-index: 4;
+  z-index: 20;
 }
 .App-modal-container:has(.modal-active) {
   display: block;
